# mak

./: Cargo.toml  Makefile  README.md
.devcontainer/: devcontainer.json
.github/workflows/: CI.yaml  github-release.yaml
Makefile-examples/: hello.Makefile
src/: main.rs  options.rs  parse.rs
