[package]
name = "mak"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "make, but mak it faster"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
clap = { version = "4.4.6", features = ["derive"] }
clap_complete = "4.4.3"
futures = "0.3.28"
indexmap = { version = "2.0.2", features = ["serde"] }
indicatif = { version = "0.17.7", features = ["improved_unicode"], path = "vendor/indicatif" }
nom = "7.1.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
